--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    background: url(https://storage.googleapis.com/tomi-submision-1/wp6517811-anime-classroom-wallpapers.jpg) no-repeat;
+    background: url(2071603.jpg) no-repeat;
+    background-size: auto;
 }
 .box{
     width: 450px;
